feat: add new update permission
